# maam

./: .darailude.init.ghci  .darailude.reload.ghci  .extensions  .extensions.ghci  .extensions.hdev  .ghc_options.ghci  .ghc_options.hdev  .ghci  .ghci.old  .gitignore  .vimrc  EnvSetup.hs  LICENSE  Makefile  OldDelimKon.hs  README  README.html  README.markdown  README.md  TODO.txt  benchmarks  cbneed-smallstep.dd  constrained-monads-discussion.md  constrained-monads-discussion.txt  count.sh  darailude  darailude-src  env-setup  ghci  ghci.sh  interact  locbugs.txt  maam.cabal  reload.ghci  run
JSAI/: README.md
JSAI/base/: README.md  build.sbt
JSAI/error/: README.md
agda/: Pushdown.agda
agda/html/: Algebra.Properties.BooleanAlgebra.Expression.html  Data.Bool.Properties.html  Data.BoundedVec.Inefficient.html  Data.Char.html  Data.Colist.html  Data.Conat.html  Data.Fin.Dec.html  Data.Fin.Subset.Properties.html  Data.Fin.Subset.html  Data.List.NonEmpty.html  Data.String.html  Data.Vec.Equality.html  Data.Vec.Properties.html  Pushdown.html  Relation.Binary.HeterogeneousEquality.html  Relation.Binary.List.StrictLex.html  Relation.Binary.Vec.Pointwise.html  Relation.Nullary.Negation.html
cabal_files/: all.cabal  darkdown.cabal  fp.cabal  maam-hask.cabal  maam-lam-if.cabal  maam.cabal
cs252r-fa14-writeup/: Makefile  paper.bib  paper.tex
data/hask-src/: Prog1.hs  Prog2.hs
data/lam-src/: flow-example.lam  simp1.lam  simp2.lam  simp3.lam  simp4.lam
data/lamif-src/: blah.lam  call-site-sensitivity.lam  flow-example.lam  flow-nonexample1.lam  flow-nonexample2.lam  flow-sensitivity.lam  kcfa.lam  object-sensitivity.lam  simp1.lam  simp3.lam
maam.key/Data/: pasted-image-1327.tif  pasted-image-1882.tif  pasted-image-4836.tif
maam.key/Metadata/: Properties.plist
quals_writeup/diagrams/: AI.tikz  AIGC.tikz  GCSoundness.tikz  GCTightness.tikz
quals_writeup/snips/: CPS-IF-AA.tex  CPS-IF-CA.tex  CPS-IF-P.tex  MCFA.tex
src/: .extensions  .extensions.ghci  .extensions.hdev  .ghc_options.ghci  .ghc_options.hdev  All.hs  Darkdown.hs  Examples.hs  FP.hs  MAAM.hs  MAAMExamplesMain.hs  Main.hs  maam.cabal
src/Darkdown/: Parser.hs
src/FP/: Compat.hs  Console.hs  Core.hs  DerivingJoinLattice.hs  DerivingLens.hs  DerivingMonoid.hs  DerivingPretty.hs  DerivingPrism.hs  ErrorList.hs  ErrorListExamples.hs  Free.hs  GHCI.hs  IO.hs  Monads.hs  Parser.hs  Pretty.hs  TH.hs
src/Lang/: CPS.hs  Common.hs  Hask.hs  Lam.hs  LamIf.hs
src/MAAM/: Classes.hs  Common.hs  GaloisTransformer.hs  Initial.hs  Inject.hs  Instances.hs  M.hs  MonadStep.hs  Time.hs
tex/: toc.tex
tex/lib/: Story0AdHoc.tex  old.tex  (+1 more)
tinytests/: simple1.js
writeup/: .gitignore  1kcfaexample.text  Makefile  Process.hs  Process_it_op.tbl  Process_macros.tbl  Process_mathitNames.tbl  Process_mathttNames.tbl  Process_post_macros.tbl  Process_pre_macros.tbl  Process_tt_op.tbl  Process_ttbf_op.tbl  README.markdown  Tables.hs  Tidy.hs  cut-copy.text  darais-quals.tex  maam.tex  new-draft.text  new-draft.text.bu  oopsla2015.tex  paper.markdown  pldi15.markdown  pldi15.tex  setup.tex  sigplanconf.cls  test.markdown  todo.markdown  writeup.cabal
writeup-old/: darais-quals.tex
writeup/arxiv-src/: oopsla2015.tex  paper.markdown.tex  sigplanconf.cls
writeup/diagrams/: AI.tikz  GCSoundness.tikz  GCTightness.tikz
writeup/galois/: Makefile
writeup/lib/newunicodechar/: README
writeup/newunicodechar/: newunicodechar.sty
writeup/old/lib/: DiagramAAM.tex  DiagramAdHoc.tex  DiagramCalculational.tex  Story1AAM.tex  Story2Monadic.tex
writeup/old/sections/03AAMByExample/01Concrete/: 00SS.hs  05Step.hs
writeup/old/sections/03AAMByExample/04RecoveringConcrete/: 02Exec.hs
writeup/old/sections/03AAMByExample/05Recovering0CFA/: 00AAM.hs  main.tex
writeup/old/sections/04MonadicAAM/00MonadicStyle/00Nondeterminism/: 02NondetMonadPlus.hs  04Call.hs  Z.tex
writeup/old/sections/04MonadicAAM/00MonadicStyle/01State/: 04MonadStateTagged.hs  06MonadStateInterior.hs  08Atom.hs  10StateSpace.hs
writeup/old/sections/04MonadicAAM/01Generalizing/: 06StateTMonadStep.hs
writeup/old/sections/04MonadicAAM/02RecoveringConcrete/: 00Point.hs  01PointMonad.hs  05Exec.hs  main.tex
writeup/old/sections/04MonadicAAM/03RecoveringKCFA/: 00AbstractMonad.hs
writeup/old/sections/04MonadicAAM/04Optimizations/00Widen/: 07NondetTMonadState.hs
writeup/sections/03AAMByExample/01Concrete/: 01Op.hs
writeup/sections/03AAMByExample/02AbstractStateSpace/: 01AAM.hs
writeup/sections/03AAMByExample/04RecoveringConcrete/: main.tex
writeup/sections/04MonadicAAM/00MonadicStyle/00Nondeterminism/: 00MonadPlus.hs  01Nondet.hs
writeup/sections/04MonadicAAM/00MonadicStyle/01State/: Z.tex
writeup/sections/04MonadicAAM/01Generalizing/: 03MonadStep.hs  04Pointed.hs  07Exec.hs
writeup/sections/04MonadicAAM/04Optimizations/: main.tex
writeup/sections/04MonadicAAM/04Optimizations/00Widen/: 04NondetT.hs  08NondetTMonadStep.hs
writeup/sections/04MonadicAAM/04Optimizations/01AbstractGC/: 01Reachable.hs  Z.tex
writeup/snips/: CPS-IF-A.tex  CPS-IF-AAm.tex  CPS-IF-AE.tex  CPS-IF-AEm.tex  CPS-IF-ASigma.tex  CPS-IF-Am.tex  CPS-IF-C.tex  CPS-IF-CE.tex  CPS-IF-CSigma.tex  CPS-IF-Cm.tex  CPS-IF-M.tex  CPS-IF-P.tex  CPS-IF-Sigma.tex  CPS-IF.tex  GC.tex  LAMIF.tex  Lam-IF-MInterpreter-ADom.tex  Lam-IF-MInterpreter.tex  Lam-IF-Semantics-Rules.tex  Lam-IF-Semantics-SS.tex  Lam-IF.tex  MCFA.tex
writeup/snips/01_Interpreter/: 03_MonadType.tex  06_PushPopKon.tex  MonadLaws.tex
writeup/snips/02_AbstractDomain/: 01_AEnv.tex  04_MonadType.tex  06_LiftNonDet.tex
writeup/stash/: oldintro.markdown  unicodechar-defs.tex
writeup/stash/snips/00_Semantics/: 00_Syntax.tex  01_Semantics.tex
writeup/stash/snips/01_Interpreter/: 00_MonadOps.tex  01_StateOps.tex  04_Atomic.tex  05_AtomDen.tex  07_Delta.tex  08_CoerceClo.tex  09_FailOnBot.tex  10_Exp.tex  PartialityLaws.tex  StateLaws.tex
writeup/stash/snips/02_AbstractDomain/: 00_AVal.tex  01_AEnv.tex  02_AtomDen.tex  03_Effects.tex  05_Atomic.tex
writeup/stash/snips/03_ContextSensitivity/: 00_AAM.tex  01_StateSpace.tex
(+521 files in other folders)
