author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Language
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                maam
synopsis:            Monadic Abstract Interpretation
version:             0.1.0.0
description:         A monadic stataic analysis framework based on AAM

source-repository head
  type: git
  location: https://github.com/davdar/maam


library
  hs-source-dirs:      src
  exposed-modules:     
    FP
    FP.Console
    FP.Core
    FP.DerivingJoinLattice
    FP.DerivingLens
    FP.DerivingMonoid
    FP.DerivingPrism
    FP.DerivingPretty
    FP.Free
    FP.GHCI
    FP.Monads
    FP.Parser
    FP.Pretty
    FP.TH
    Lang.JS.Delta
    Lang.JS.Execution
    Lang.JS.FrontEnd
    Lang.JS.Syntax
    Lang.JS.StateSpace
    Lang.Common
    MAAM
    MAAM.Initial
    MAAM.MonadStep
    MAAM.Time
  build-depends:
      base == 4.7.*
    , containers 
    , text 
    , template-haskell 
    , directory 
    , Cabal 
    , language-ecmascript 
    , LambdaJS
    , strict
  default-language: Haskell2010
  ghc-options: 
    -Wall 
    -fno-warn-amp 
    -fno-warn-orphans 
    -isrc
    -- -O3
    -- -fprof-auto
  default-extensions:  
    ConstraintKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    DataKinds
    TemplateHaskell

-- executable js
--   build-depends: 
--       maam == 0.1.*
--     , directory
--   main-is: src/Lang/JS/Main.hs
--   ghc-options: 
--     -Wall 
--     -fno-warn-amp 
--     -fno-warn-orphans 
--     -threaded
--     -- -O3
--     -- -H6G
--   default-extensions: 
--     NoImplicitPrelude
--     RebindableSyntax
--     OverloadedStrings
--   default-language: Haskell2010

-- executable js-prof
--   build-depends: 
--       maam == 0.1.*
--     , directory
--   main-is: src/Lang/JS/Main.hs
--   ghc-options: 
--     -Wall 
--     -fno-warn-amp 
--     -fno-warn-orphans 
--     -threaded
--     -O3
--     -fprof-auto
--     -H6G
--     "-with-rtsopts=-N -p -s -h -i0.1"
--   default-extensions: 
--     NoImplicitPrelude
--     RebindableSyntax
--     OverloadedStrings
--   default-language: Haskell2010
