author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Static Analysis
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                maam
synopsis:            An application of the Galois Transformers framework to two example semantics.
version:             0.2.0.1
description:         An application of the Galois Transformers framework to two example semantics.
data-files:          data/lamif-src/*.lam data/hask-src/*.hs
extra-source-files:  EnvSetup.hs ghci.sh Makefile README.md .ghci .reload.ghci

source-repository head
  type: git
  location: https://github.com/davdar/maam

library
  hs-source-dirs: src darailude-src
  default-language: Haskell2010
  build-depends:
      base
    , containers 
    , directory
    , filepath
    , template-haskell 
    , text 
    , regex-tdfa
    , bytestring

    , ghc
  ghc-options: 
    -isrc
    -idarailude-src
    -Wall 
    -fno-warn-amp 
    -fno-warn-orphans 
  default-extensions:  
    ConstraintKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    DataKinds
    TemplateHaskell
  exposed-modules:     
    FP
    FP.Compat
    FP.Console
    FP.Core
    FP.Deriving
    FP.Deriving.JoinLattice
    FP.Deriving.Lens
    FP.Deriving.Monoid
    FP.Deriving.Pretty
    FP.Deriving.Prism
    FP.Free
    FP.IO
    FP.Monads
    FP.Parser
    FP.Pretty
    FP.String
    FP.Tables
    FP.TH
    Lang.Hask
    Lang.Hask.Compat
    Lang.Hask.CPS
    Lang.Hask.Execution
    Lang.Hask.GHCPlugin
    Lang.Hask.Monads
    Lang.Hask.Pretty
    Lang.Hask.Semantics
    Lang.Hask.SumOfProdVal
    Lang.Hask.Time
    Lang.Hask.ValConcrete
    Lang.LamIf
    Lang.LamIf.Analyses
    Lang.LamIf.CPS
    Lang.LamIf.Examples
    Lang.LamIf.Monads
    Lang.LamIf.Parser
    Lang.LamIf.Passes
    Lang.LamIf.Pretty
    Lang.LamIf.Semantics
    Lang.LamIf.StateSpace
    Lang.LamIf.Syntax
    Lang.LamIf.Val
    MAAM
    MAAM.Inject
    MAAM.MonadStep
    MAAM.Time

executable maam
  default-language: Haskell2010
  build-depends: maam
  main-is: src/Lang/LamIf/Main.hs
  default-extensions:  
    NoImplicitPrelude
