author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            StaticAnalysis
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                maam-hask
synopsis:            An application of the maam static analysis library to ghc core
version:             0.1.0.0
description:         An application of the maam static analysis library to ghc core
data-files:          data/lam-src/*.lam

source-repository head
  type: git
  location: https://github.com/davdar/maam

library
  hs-source-dirs: src
  exposed-modules:     
    FP
    FP.Console
    FP.Core
    FP.DerivingJoinLattice
    FP.DerivingLens
    FP.DerivingMonoid
    FP.DerivingPrism
    FP.DerivingPretty
    FP.Free
    FP.GHCI
    FP.IO
    FP.Monads
    FP.Parser
    FP.Pretty
    FP.TH
    FP.Compat
    Lang.Hask
    Lang.Hask.CPS
    Lang.Hask.Semantics
    Lang.Hask.ValConcrete
    MAAM
    MAAM.Inject
    MAAM.MonadStep
    MAAM.Time
  build-depends:
      base == 4.7.*
    , ghc == 7.8.*
    , containers 
    , text 
    , template-haskell 
    , directory 
    , Cabal 
  default-language: Haskell2010
  ghc-options: 
    -isrc
    -Wall 
    -fno-warn-amp 
    -fno-warn-orphans 
  default-extensions:  
    ConstraintKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    DataKinds
    TemplateHaskell
