author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            StaticAnalysis
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                maam
synopsis:            An application of the maam static analysis library to a small applied lambda calculus.
version:             0.1.0.0
description:         An application of the maam static analysis library to a small applied lambda calculus.
data-files:          data/lam-src/*.lam

source-repository head
  type: git
  location: https://github.com/davdar/maam

library
  hs-source-dirs: src
  exposed-modules:     
    FP
    FP.Console
    FP.Core
    FP.DerivingJoinLattice
    FP.DerivingLens
    FP.DerivingMonoid
    FP.DerivingPrism
    FP.DerivingPretty
    FP.Free
    FP.GHCI
    FP.IO
    FP.Monads
    FP.Parser
    FP.Pretty
    FP.TH
    Lang.LamIf
    Lang.LamIf.Analyses
    Lang.LamIf.CPS
    Lang.LamIf.Examples
    Lang.LamIf.Monads
    Lang.LamIf.Parser
    Lang.LamIf.Passes
    Lang.LamIf.Pretty
    Lang.LamIf.Semantics
    Lang.LamIf.StateSpace
    Lang.LamIf.Syntax
    Lang.LamIf.Val
    MAAM
    MAAM.Initial
    MAAM.MonadStep
    MAAM.Time
  build-depends:
      base == 4.7.*
    , containers 
    , text 
    , template-haskell 
    , directory 
    , Cabal 
  default-language: Haskell2010
  ghc-options: 
    -isrc
    -Wall 
    -fno-warn-amp 
    -fno-warn-orphans 
  default-extensions:  
    ConstraintKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    DataKinds
    TemplateHaskell

executable maam
  build-depends: maam == 0.1.*
  main-is: src/Lang/LamIf/Main.hs
  ghc-options: 
    -Wall 
    -fno-warn-amp 
    -fno-warn-orphans 
  default-extensions: 
    NoImplicitPrelude
  default-language: Haskell2010
