author:              David Darais
name:                maam-writeup
version:             0.1.0.0
build-type:          Simple

library
  exposed-modules: Process
  build-depends: base
               , pandoc == 1.13.*
               , pandoc-types
               , process
               , regex-tdfa
               , regex-compat-tdfa
               , text
               , directory
               , filepath
               , mtl
               , split
